fix(): fixes #952 bal-card-title with bal-tag in bal-card aligned

--- a/packages/components/src/components/bal-card/bal-card.sass
+++ b/packages/components/src/components/bal-card/bal-card.sass
@@ -158,6 +158,9 @@
     .bal-button-group
       margin-top: .5rem
   +tablet
+    .bal-heading h3
+        display: flex
+        align-items: center
     .title
       display: flex
       .bal-tag-group,
@@ -170,8 +173,6 @@
           margin-top: .125rem
       .bal-button-group
         flex: 1
-        .bal-button
-          margin-top: -0.5rem
 
 +block(card-subtitle)
   display: block
